--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html {
 
 * {
 	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
 	margin: 0px;
 	padding: 0px;
 }
@@ -177,8 +178,9 @@ textarea {
 .hero {
 	position: relative;
 	height: 90vh;
+	/* max-height: 785px; */
 	width: 100vw;
-
+	width: 100%;
 	/* display: flex;
     align-items: center;
     justify-content: center; */
@@ -209,6 +211,7 @@ textarea {
 .hero-img {
 	position: absolute;
 	height: inherit;
+	/* max-height: inherit; */
 	width: inherit;
 	z-index: -1;
 
@@ -225,6 +228,7 @@ textarea {
 }
 
 .hero-content-wrapper {
+	/* max-height: inherit; */
 	height: inherit;
 	width: inherit;
 	position: relative;
@@ -233,6 +237,7 @@ textarea {
 }
 
 .hero-content {
+	/* max-height: inherit; */
 	position: absolute;
 	bottom: 30px;
 	width: 90%;
@@ -261,8 +266,6 @@ textarea {
 }
 
 .down-arrow img:hover {
-	/* height: 52px;
-	width: 98px; */
 	transform: scale(1.2);
 }
 
@@ -508,11 +511,28 @@ footer {
 	transform: scaleX(20px);
 } */
 
+/* keeps modal "X" accesable at smaller resolutions */
+@media only screen and (max-width: 422px) {
+	.modal-x {
+		top: 73px;
+	}
+}
+
 /* @media (orientation: landscape) { */
 @media only screen and (min-width: 1000px) {
+
+	
 	/* Hero Desktop */
 
+	.hero {
+		max-width: 1920px;
+		max-height: 1025px;
+		margin: auto;
+	}
+
 	.hero-img {
+		max-width: inherit;
+		max-height: inherit;
 		background-image: url(/resources/hero.png),
 			linear-gradient(360deg, #000000 0%, rgba(163, 163, 163, 0.9) 87.01%);
 		border-radius: 0px 0px 180px 0px;
@@ -520,17 +540,20 @@ footer {
 
 	.hero-content-wrapper {
 		height: inherit;
+		max-height: inherit;
 		width: inherit;
+		max-width: inherit;
 		position: relative;
 		display: flex;
 		justify-content: flex-end;
-		/* border: solid tomato; */
 	}
 
 	.hero-content {
 		width: 60vw;
+		height: inherit;
+		max-height: inherit;
+		max-width: 995px;
 		padding-top: 100px;
-		/* border: solid tomato; */
 		position: relative;
 		bottom: 0px;
 	}
@@ -559,7 +582,7 @@ footer {
 	.down-arrow {
 		position: absolute;
 		bottom: 25px;
-		right: 50vw;
+		right: 85%;
 		transform: translateX(50%);
 	}
 
@@ -567,7 +590,10 @@ footer {
 		position: absolute;
 		right: 0px;
 		height: inherit;
+		/* max-height: inherit; */
 		width: 35vw;
+		max-width: 595px;
+		max-height: inherit;
 		background: rgba(240, 100, 73, 0.42);
 		border-radius: 180px 0px;
 	}
@@ -723,8 +749,43 @@ footer {
 	}
 }
 
-@media only screen and (max-width: 422px) {
-	.modal-x {
-		top: 73px;
+@media only screen and (min-width: 1500px) {
+
+	.brian-williams-title {
+		height: 500px;
+		max-width: 735px;
+	}
+
+	/* .contact-button {
+		height: 250px;
+		width: 250px;
+		border-top: solid 10px;
+		border-right: solid 10px;
+		left: 37px;
+		bottom: 40px;
+	} */
+
+	.down-arrow {
+		bottom: 35px;
+	}
+	.down-arrow img {
+		transform: scale(1.2);
+	}
+
+	.down-arrow img:hover {
+		transform: scale(1.5);
+	}
+
+	.about {
+		padding: 300px 0px;;
+	}
+	.about-content-wrapper {
+		transform: scale(1.3);
+	}
+
+	.projects-tag, .skills-carousel, .swipe-tag, .project-grid {
+		/* transform: scale(1.1); */
 	}
 }
+
+
