--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 html {
 	scroll-behavior: smooth;
-	scroll-padding-top: 25px;
+	scroll-padding-top: 155px;
 }
 
 * {
@@ -66,7 +66,8 @@ body {
 }
 
 .blur {
-	filter: blur(5px);
+	filter: blur(3px);
+	backdrop-filter: blur(1px);
 }
 
 /* Header */
@@ -178,43 +179,14 @@ textarea {
 .hero {
 	position: relative;
 	height: 90vh;
-	/* max-height: 785px; */
-	width: 100vw;
-	width: 100%;
-	/* display: flex;
-    align-items: center;
-    justify-content: center; */
+	width: 100%;	
 }
-
-/* .hero-img {
-	position: absolute;
-    background-image: url("/resources/hero-mobile.png");
-    
-	border: 20px solid;
-	border-image-source: linear-gradient(
-		360deg,
-		#000000 0%,
-		rgba(163, 163, 163, 0.9) 87.01%
-	);
-	border-top: none;
-    border-image-slice: 1;
-
-	height: inherit;
-	width: inherit;
-	z-index: -1;
-	background-size: cover;
-	background-repeat: no-repeat;
-    background-position: center top;
-    
-} */
 
 .hero-img {
 	position: absolute;
 	height: inherit;
-	/* max-height: inherit; */
 	width: inherit;
 	z-index: -1;
-
 	border: double 15px transparent;
 	background-image: url("/resources/hero-mobile.png"),
 		linear-gradient(360deg, #000000 0%, rgba(163, 163, 163, 0.9) 87.01%);
@@ -228,7 +200,6 @@ textarea {
 }
 
 .hero-content-wrapper {
-	/* max-height: inherit; */
 	height: inherit;
 	width: inherit;
 	position: relative;
@@ -237,20 +208,22 @@ textarea {
 }
 
 .hero-content {
-	/* max-height: inherit; */
 	position: absolute;
-	bottom: 30px;
+	bottom: 75px;
 	width: 90%;
+}
+
+.down-arrow {
+	position: absolute;
+	bottom: 25px;
 }
 
 .brian-williams-title {
 	height: 150px;
-	/* background-image: url(/resources/Brian_Williams.svg); */
 	background-image: url("/resources/brian_williams_mobile.svg");
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center;
-	/* border: solid tomato; */
 	max-width: 535px;
 }
 
@@ -280,7 +253,6 @@ textarea {
 	border: none;
 	font-size: 1em;
 	border-radius: 1px 20px 1px 1px;
-
 	transition: 0.5s;
 }
 
@@ -340,10 +312,14 @@ strong {
 /* Projects */
 
 .projects {
+	margin-bottom: 30px;
 	position: relative;
+	overflow: hidden;
+}
+
+.projects-wrapper {
 	display: flex;
 	flex-direction: column;
-	margin-bottom: 30px;
 }
 
 .projects-tag {
@@ -351,6 +327,9 @@ strong {
 }
 
 .skills-carousel {
+	display: flex;
+	position: relative;
+	align-items: center;
 	z-index: 1;
 	height: 130px;
 	width: 90vw;
@@ -361,12 +340,39 @@ strong {
 	background: #e5e5e5;
 	border: solid 3px;
 	border-radius: 0px 0px 30px 30px;
+	overflow: hidden;
+}
+
+.left-arrow, .right-arrow {
+	z-index: 1;
+	position: absolute;
+	padding: 15px;
+	background: none;
+	border: none;
+	outline: none;
+
+	transition: transform .5s;
+}
+
+.left-arrow:hover{
+	transform: scale(1.3);
+	
+}
+
+.right-arrow:hover {
+	transform: scale(1.3);
+}
+
+.left-arrow {
+	visibility: hidden;
+}
+
+.right-arrow {
+	visibility: hidden;
 }
 
 .slide-container {
 	display: flex;
-	/* height: 100vh; */
-	width: 100%;
 	height: 126px;
 	scroll-snap-type: x mandatory;
 	overflow-x: scroll;
@@ -379,6 +385,8 @@ strong {
 		rgba(255, 255, 255, 0) 75%,
 		rgba(255, 255, 255, 0.5) 100%
 	);
+
+	transition: transform 1s;
 }
 
 .slide-container::-webkit-scrollbar {
@@ -483,7 +491,6 @@ strong {
 	height: 217px;
 	margin: auto;
 	padding-top: 30px;
-	/* left: 50px; */
 }
 
 /* Footer */
@@ -518,10 +525,9 @@ footer {
 	}
 }
 
-/* @media (orientation: landscape) { */
+/* Media at Medium screen size */
 @media only screen and (min-width: 1000px) {
 
-	
 	/* Hero Desktop */
 
 	.hero {
@@ -560,14 +566,10 @@ footer {
 
 	.brian-williams-title {
 		background-image: url(/resources/brian_williams.svg);
-		/* width: 100%; */
-		/* max-width: 535px; */
 		height: 300px;
-		/* background-image: url(/resources/Brian_Williams.svg); */
 		background-size: contain;
 		background-repeat: no-repeat;
 		background-position: center;
-		/* border: solid tomato; */
 		max-width: 535px;
 	}
 
@@ -575,14 +577,13 @@ footer {
 		position: absolute;
 		width: 70%;
 		right: 0px;
-		/* border: solid tomato; */
 		font-size: 1.3em;
 	}
 
 	.down-arrow {
 		position: absolute;
 		bottom: 25px;
-		right: 85%;
+		right: 50%;
 		transform: translateX(50%);
 	}
 
@@ -590,7 +591,6 @@ footer {
 		position: absolute;
 		right: 0px;
 		height: inherit;
-		/* max-height: inherit; */
 		width: 35vw;
 		max-width: 595px;
 		max-height: inherit;
@@ -605,41 +605,39 @@ footer {
 		border-right: solid 5px;
 		font-size: 1.5em;
 		border-radius: 0 100% 0 0;
-
 		background-color: var(--background-color);
 		color: #222;
 		padding: 0.5em 1em;
 		outline: none;
 		position: absolute;
 		cursor: pointer;
-
 		--background-color: #e3e3e3;
 		--border-size: 2px;
 	}
 
 	.contact-button h4 {
-		margin-left: -20px;
+		margin-left: -15px;
 		padding-top: 25px;
+		
 	}
 
 	.contact-button.btn-background-circle::before {
 		content: "";
 		position: absolute;
-		top: 140px;
-		left: 0;
-		right: 140px;
-		bottom: 0;
+		width: inherit;
+		height: inherit;
+		right: 50%;
+		top: 50%;
 		z-index: -1;
 		background-color: var(--clr-accent);
 		border-radius: 50%;
 		transition: transform 500ms ease-in-out;
-
 		transform: scale(0);
 	}
 
 	.contact-button.btn-background-circle:hover::before,
 	.contact-button.btn-background-circle:focus::before {
-		transform: scale(60);
+		transform: scale(2);
 	}
 
 	.contact-button.btn-background-circle {
@@ -652,7 +650,6 @@ footer {
 	/* About Desktop */
 
 	.about {
-		/* border: solid 5px red; */
 		display: flex;
 		justify-content: center;
 	}
@@ -691,12 +688,8 @@ footer {
 		margin: 170px 50px 100px 50px;
 		padding: 25px;
 		width: 400px;
-
 		line-height: 1.6em;
 		box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.5);
-
-		/* max-width: 369px; */
-
 		top: 50px;
 	}
 
@@ -717,10 +710,32 @@ footer {
 		box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.5);
 	}
 
+	/* Projects desktop */
+
+	.right-arrow {
+		visibility: visible;
+		position: absolute;
+		right: 0;
+	}
+
+	.left-arrow {
+		visibility: visible;
+		position: absolute;
+
+	}
+
+	.slide-container {
+		overflow-x: visible;
+	}
+
+	.swipe-tag {
+		visibility: hidden;
+	}
+
 	/* Modal desktop */
 
 	.contact-modal {
-		padding: 100px 50px 10px 50px;
+		padding: 100px 50px 0px 50px;
 		width: 80vw;
 		max-width: 1000px;
 	}
@@ -743,12 +758,15 @@ footer {
 	}
 
 	.contact-submit-button {
+		margin-bottom: 25px;
+		width: 200px;
 		height: 63px;
 		border-radius: 60px;
 		font-size: 1.4em;
 	}
 }
 
+/* Media at large screen-size */
 @media only screen and (min-width: 1500px) {
 
 	.brian-williams-title {
@@ -756,14 +774,19 @@ footer {
 		max-width: 735px;
 	}
 
-	/* .contact-button {
+	.contact-button {
 		height: 250px;
 		width: 250px;
 		border-top: solid 10px;
 		border-right: solid 10px;
-		left: 37px;
-		bottom: 40px;
-	} */
+	}
+
+	.contact-button h4 {
+		font-size: 1.4em;
+		margin-left: -40px;
+		padding-top: 35px;
+		
+	}
 
 	.down-arrow {
 		bottom: 35px;
@@ -779,13 +802,11 @@ footer {
 	.about {
 		padding: 300px 0px;;
 	}
-	.about-content-wrapper {
+	.about-content-wrapper, .projects-wrapper {
 		transform: scale(1.3);
 	}
 
-	.projects-tag, .skills-carousel, .swipe-tag, .project-grid {
-		/* transform: scale(1.1); */
+	.projects {
+		padding: 200px 0;
 	}
 }
-
-
