Fixed stylesheet issue

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h2 {
 
 body {
 	height: auto;
-	background-image: url("/resources/dot-grid-custom.svg");
+	background-image: url("resources/dot-grid-custom.svg");
 	background-position-x: center;
 	background-size: 20em;
 	object-fit: none;
@@ -186,7 +186,7 @@ textarea {
 
 /* .hero-img {
 	position: absolute;
-    background-image: url("/resources/hero-mobile.png");
+    background-image: url("resources/hero-mobile.png");
     
 	border: 20px solid;
 	border-image-source: linear-gradient(
@@ -213,7 +213,7 @@ textarea {
 	z-index: -1;
 
 	border: double 15px transparent;
-	background-image: url("/resources/hero-mobile.png"),
+	background-image: url("resources/hero-mobile.png"),
 		linear-gradient(360deg, #000000 0%, rgba(163, 163, 163, 0.9) 87.01%);
 	border-top: none;
 	background-position: center;
@@ -240,8 +240,8 @@ textarea {
 
 .brian-williams-title {
 	height: 150px;
-	/* background-image: url(/resources/Brian_Williams.svg); */
-	background-image: url("/resources/brian_williams_mobile.svg");
+	/* background-image: url(resources/Brian_Williams.svg); */
+	background-image: url("resources/brian_williams_mobile.svg");
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -513,7 +513,7 @@ footer {
 	/* Hero Desktop */
 
 	.hero-img {
-		background-image: url(/resources/hero.png),
+		background-image: url(resources/hero.png),
 			linear-gradient(360deg, #000000 0%, rgba(163, 163, 163, 0.9) 87.01%);
 		border-radius: 0px 0px 180px 0px;
 	}
@@ -536,11 +536,11 @@ footer {
 	}
 
 	.brian-williams-title {
-		background-image: url(/resources/brian_williams.svg);
+		background-image: url(resources/brian_williams.svg);
 		/* width: 100%; */
 		/* max-width: 535px; */
 		height: 300px;
-		/* background-image: url(/resources/Brian_Williams.svg); */
+		/* background-image: url(resources/Brian_Williams.svg); */
 		background-size: contain;
 		background-repeat: no-repeat;
 		background-position: center;
