--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ body {
 .blur {
 	filter: blur(3px);
 	backdrop-filter: blur(1px);
+	-webkit-backdrop-filter: blur(1px);
 }
 
 /* Header */
@@ -88,7 +89,8 @@ nav {
 ul {
 	width: inherit;
 	display: flex;
-	justify-content: end;
+	justify-content: flex-end;
+
 }
 
 .icon {
@@ -126,7 +128,7 @@ ul {
 .contact-modal {
 	z-index: 1;
 	position: absolute;
-	margin: 100px;
+	margin-top: 130px;
 	padding: 100px 10px 10px 10px;
 	height: auto;
 	width: 90vw;
@@ -172,6 +174,10 @@ textarea {
 .contact-submit-button {
 	background: white;
 	font-size: 1em;
+}
+
+.contact-button h4 {
+	color: black;
 }
 
 /* Hero Section */
@@ -236,10 +242,6 @@ textarea {
 
 .down-arrow img {
 	transition: 0.3s;
-}
-
-.down-arrow img:hover {
-	transform: scale(1.2);
 }
 
 .contact-button {
@@ -459,7 +461,9 @@ strong {
 	margin: 5px;
 	border: solid 3px;
 	border-radius: 20px;
-
+	background: white;
+	color: black;
+	
 	transition: 0.2s;
 }
 
@@ -585,6 +589,10 @@ footer {
 		bottom: 25px;
 		right: 50%;
 		transform: translateX(50%);
+	}
+
+	.down-arrow img:hover {
+		transform: scale(1.2);
 	}
 
 	.color-blob {
