--- a/style.css
+++ b/style.css
@@ -290,14 +290,42 @@ textarea {
 }
 
 .about-paragraph {
-	padding: 20px;
-	padding-top: 80px;
-	padding-bottom: 30px;
+	padding: 80px 20px 30px 20px;
 	max-width: 469px;
 	margin: auto;
+	line-height: 1.5em;
 }
 
 strong {
+	font-size: 1.5em;
+}
+
+.more-text {
+	display: none;
+	
+}
+
+.toggle-more-text {
+	display: inline;
+	
+}
+
+.read-more-btn {
+	position: relative;
+	display: flex;
+	justify-content: center;
+	margin: -90px auto 20px auto;
+	width: 100%;
+	height: 80px;
+	border: none;
+	background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(254,254,254,1) 45%, rgba(148,187,233,0) 100%);
+	border-radius: 0 0 50px 50px;
+}
+
+.read-more-btn h3 {
+	position: absolute;
+	margin: auto;
+	bottom: 10px;
 	font-size: 1.5em;
 }
 
@@ -529,6 +557,16 @@ footer {
 	}
 }
 
+@media only screen and (min-width: 545px) {
+	.more-text {
+		display: inline;
+	}
+
+	.read-more-btn {
+		display: none;
+	}
+}
+
 /* Media at Medium screen size */
 @media only screen and (min-width: 1000px) {
 
@@ -676,9 +714,10 @@ footer {
 	}
 
 	.about-content-wrapper {
+		display: flex;
 		margin-left: 10vw;
 		margin-right: 10vw;
-		flex-direction: row;
+		flex-direction: column;
 		background-color: var(--clr-accent);
 		border: solid 15px;
 		border-radius: 250px 0px 250px;
@@ -689,20 +728,29 @@ footer {
 	}
 
 	.about-paragraph {
-		z-index: 1;
+		flex: 1;
+		z-index: 0;
 		border: 2px dashed #000000;
 		background: rgba(245, 154, 137, 1);
 		border-radius: 55px 0px 86px;
-		margin: 170px 50px 100px 50px;
+		margin: 170px 50px 0 50px;
 		padding: 25px;
-		width: 400px;
+		/* width: 400px; */
+		max-width: none;
 		line-height: 1.6em;
 		box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.5);
 		top: 50px;
 	}
 
+	.about-paragraph:before {
+		content: '';
+		float: right;
+		height: 300px;
+		width: 323px;
+	}
+
 	strong {
-		font-size: 1.5em;
+		font-size: 1.65em;
 		font-weight: bold;
 		stroke: solid 15px black;
 	}
@@ -718,18 +766,81 @@ footer {
 		box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.5);
 	}
 
+	.course-showcase {
+		margin: 40px auto;
+		width: 700px;
+		display: flex;
+		justify-content: space-around;
+		flex-wrap: wrap;
+	}
+
+	.course {
+		/* background-image: url('resources/codecademy-logo.png'); */
+		height: 115px;
+		width: 115px;
+		border: solid black 2px;
+		background: white;
+		border-radius: 50%;
+		background-repeat: no-repeat;
+		background-position: center;
+		box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.50);
+
+		transition: .3s;
+		
+	}
+
+	.course:hover {
+		transform: scale(1.2);
+		box-shadow: 7px 7px 7px rgba(0, 0, 0, 0.50);
+	}
+
+	#course1 {
+		background-image: url('resources/jetbrains-logo\ .png');
+		background-size: 85px;
+	}
+
+	#course2 {
+		background-image: url('resources/codecademy-logo.png');
+		background-size: 75px;
+	}
+
+	#course3 {
+		background-image: url('resources/edx-logo.png');
+		background-size: 90px;
+	}
+
+	#course4 {
+		background-image: url('resources/mimo-logo.png');
+		background-size: 80px;
+	}
+
+	#course5 {
+		background-image: url('resources/harvard-logo.png');
+		background-size: 90px;
+	}
+
 	/* Projects desktop */
 
 	.right-arrow {
 		visibility: visible;
 		position: absolute;
+		background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.9878326330532213) 48%);
+		border-radius: 0 30px 30px 0;
+
 		right: 0;
 	}
 
 	.left-arrow {
 		visibility: visible;
 		position: absolute;
+		background: linear-gradient(270deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.9878326330532213) 48%);
+		border-radius:  30px 0 0 30px;
 
+
+	}
+
+	.arrow:hover {
+		cursor: pointer;
 	}
 
 	.slide-container {
