--- a/style.css
+++ b/style.css
@@ -38,7 +38,6 @@ body {
 	height: auto;
 	background-image: url("resources/dot-grid-custom.svg");
 	background-position-x: center;
-	background-size: 20em;
 	object-fit: none;
 	background-repeat: repeat;
 }
@@ -56,7 +55,7 @@ body {
 	display: inline-block;
 	font-size: 48px;
 	/* box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25); */
-	box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.5);
+	box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.35);
 }
 
 .hide-window {
@@ -270,6 +269,7 @@ textarea {
 }
 
 .about-tag {
+	box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.5);
 	position: absolute;
 	border-radius: 65px 0px 0px 0px;
 	top: -65px;
@@ -339,20 +339,19 @@ strong {
 	box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-/* Projects */
-
-.projects {
-	margin-bottom: 30px;
-	position: relative;
-	overflow: hidden;
+/* Skills */
+.skills {
+	display: flex;
 }
 
-.projects-wrapper {
+.skills-wrapper {
+	margin: auto;
 	display: flex;
 	flex-direction: column;
+	padding: 30px 0 180px 0;
 }
 
-.projects-tag {
+.skills-tag {
 	margin: auto;
 }
 
@@ -371,6 +370,7 @@ strong {
 	border: solid 3px;
 	border-radius: 0px 0px 30px 30px;
 	overflow: hidden;
+	box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.3);
 }
 
 .left-arrow, .right-arrow {
@@ -450,6 +450,25 @@ strong {
 	margin-bottom: 30px;
 	background: var(--clr-accent);
 }
+
+/* Projects */
+
+.projects {
+	margin-bottom: 30px;
+	position: relative;
+	overflow: hidden;
+}
+
+.projects-wrapper {
+	display: flex;
+	flex-direction: column;
+}
+
+.projects-tag {
+	margin: auto;
+	margin-bottom: 50px;
+}
+
 
 .project-grid {
 	margin: auto;
@@ -735,7 +754,6 @@ footer {
 		border-radius: 55px 0px 86px;
 		margin: 170px 50px 0 50px;
 		padding: 25px;
-		/* width: 400px; */
 		max-width: none;
 		line-height: 1.6em;
 		box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.5);
@@ -826,7 +844,6 @@ footer {
 		position: absolute;
 		background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.9878326330532213) 48%);
 		border-radius: 0 30px 30px 0;
-
 		right: 0;
 	}
 
@@ -835,8 +852,6 @@ footer {
 		position: absolute;
 		background: linear-gradient(270deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.9878326330532213) 48%);
 		border-radius:  30px 0 0 30px;
-
-
 	}
 
 	.arrow:hover {
@@ -904,7 +919,6 @@ footer {
 		font-size: 1.4em;
 		margin-left: -40px;
 		padding-top: 35px;
-		
 	}
 
 	.down-arrow {
@@ -921,8 +935,12 @@ footer {
 	.about {
 		padding: 300px 0px;;
 	}
-	.about-content-wrapper, .projects-wrapper {
+	.about-content-wrapper, .projects-wrapper, .skills-wrapper {
 		transform: scale(1.3);
+	}
+
+	.skills-wrapper {
+		padding-top: 160px;
 	}
 
 	.projects {
