--- a/style.css
+++ b/style.css
@@ -334,8 +334,10 @@ strong {
 	margin-bottom: 35px;
 	border-radius: 112px 0px;
 	width: 100%;
+	background-color: #000000;
+
 	max-width: 400px;
-	border: solid 1px;
+	border: solid 4px;
 	box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -540,6 +542,7 @@ strong {
 .project-image {
 	display: block;
 	height: 217px;
+	width: auto;
 	margin: auto;
 	padding-top: 30px;
 }
